# bmad

./: .gitignore  AGENTS.md  CLAUDE.md  FAILURES.md  GEMINI.md  HITL_INVESTIGATION_FAILURES.md  MOCK_TEST_CLEANUP_SUMMARY.md  deploy.py  deploy.sh  gcp-service-account-template.json  test-hitl-manual.js
backend/: .gitignore  .pre-commit-config.yaml  =0.37.0  =1.1.1  =1.117.0  =25.4.0  ALL_FIXES_SUMMARY.md  Dockerfile  Dockerfile.dev  FAILEDTESTS.md  FINAL_STATUS.md  FIXES_APPLIED.md  README.md  README_SQLITE.md  SPRINT2_COMPLETION_SUMMARY.md  TROUBLESHOOTING.md  adk_advanced_features.py  adk_agent_factory.py  adk_best_practices.py  adk_config.py  adk_custom_tools.py  adk_feature_flags.json  adk_feature_flags.py  adk_logging.py  adk_migration_plan.py  adk_observability.py  adk_performance_optimizer.py  adk_rollback_procedures.py  adk_rollout_checklist.py  adk_validation.py  alembic.ini  check_db.py  clean_duplicate_markers.py  docker-compose.dev.yml  docker-compose.yml  env.example  env.sqlite.example  execute_adk_migration.py  external_service_test_results.json  fix_async_markers.py  (+18 more)
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py  settings.py
backend/docs/: migration-review-checklist.md  mock_refactoring_final_summary.md  mock_refactoring_progress.md  mock_refactoring_summary.md
backend/scripts/: add_test_markers.py  analyze_mock_usage.py  analyze_test_markers.py  cleanup_system.py  compare_mock_vs_real_tests.py  comprehensive_mock_analysis.py  comprehensive_mock_reduction_final_report.py  create_test_project.py  external_service_testing_strategy.py  find_problematic_service_mocks.py  fix_conflicting_markers.py  high_priority_service_fixes_report.py  kill_processes.sh  maintain_test_markers.py  medium_priority_analysis.py  medium_priority_completion_report.py  run_migrations.sh  run_phase1_tests.py  run_phase2_tests.py  setup_phase1_environment.py  start_dev.sh  start_simple.sh  start_with_port.sh  status.sh  test_schema_fixes.py  validate_database_schema.py  validate_mock_fixes.py  verify_adk.py
docs/: PLAN.md  (+28 more)
(+549 files in other folders)
