[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botarmy-backend"
version = "0.1.0"
description = "BotArmy POC Backend Services"
authors = [{name = "BotArmy Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.5.0",
    "sqlalchemy==2.0.43",
    "alembic==1.13.1",
    "psycopg[binary]==3.2.10",
    "redis==5.0.1",
    "celery==5.3.4",
    "websockets==12.0",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
    "orjson==3.9.10",
    "click==8.1.7",
    "autogen-agentchat==0.7.4",
    "docker==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
